# OpenGL-Lighting

./: CMakeLists.txt  README.md
docs/: ReadMe.txt
include/: camera.h  drawing_lib.h  gui.h  loader.h  object.h  session.h  shader.h
shaders/: shader_axis.frag  shader_axis.vert  shader_central.frag  shader_central.vert  shader_flashlight.frag  shader_flashlight.vert  shader_grid.frag  shader_grid.vert
src/: camera.cpp  drawing_lib.cpp  gui.cpp  loader.cpp  main.cpp  object.cpp  session.cpp  shader.cpp
